projet_gl/src/test/deca/syntax/invalid/opArith/incorrectMultiply.deca
// Description:
//    invalid test parser for binary expression (multiply).
//
// Resultats:
//    ligne 13 : extraneous input '*' expecting {'true', 'new', 'null', 'readInt', 'false', 'readFloat', 'this', IDENT, '-', '(', '!', INT, FLOAT, STRING}
//
// Historique:
//    cree le 12/01/2024

{
   int x = 1;
   int y = 2;
   int mul = y**x;
}